--- a/www/components/menu/menu.html
+++ b/www/components/menu/menu.html
@@ -12,13 +12,13 @@
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left" ng-controller="AppCtrl as vm">
+  <ion-side-menu side="left" ng-controller="MenuCtrl as menu">
     <ion-header-bar class="bar-stable">
       <h1 class="title">Left</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close ng-click="vm.login()">
+        <ion-item menu-close ng-click="menu.login()">
           Login
         </ion-item>
         <ion-item menu-close href="#/app/search">
